[package]
name = "pi-pico-w-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp-pico = "0.9.0"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[[bin]]
name = "1-blink"
path = "./src/1-blink.rs"

[[bin]]
name = "2-btn-led"
path = "./src/2-btn-led.rs"